# log-generator

./: .gitignore  Cargo.toml  README.md  deploy.sh  logs_instructions
examples/: benchmark.toml  complex_scenario.toml  flat_100mb_15min.toml  helios_demo.toml  hour_long.toml  ramp_stress.toml  twenty_min.toml
src/: daemon.rs  lib.rs  main.rs
src/anomaly/: controller.rs  mod.rs
src/config/: mod.rs  scenario.rs
src/fields/: ip.rs  mod.rs  path.rs  pool.rs  status.rs  timestamp.rs  user_agent.rs
src/generator/: engine.rs  mod.rs  worker.rs
src/output/: file.rs  http.rs  http_concurrent.rs  metrics.rs  mod.rs  null.rs
src/scenario/: executor.rs  mod.rs  spikes.rs  timeline.rs
src/templates/: apache.rs  helios.rs  json.rs  mod.rs  nginx.rs  syslog.rs
